styling fix and update
iPad landscape now shows tablet version stretched wide.

--- a/styles/scss/modules/page-transitions/_page.scss
+++ b/styles/scss/modules/page-transitions/_page.scss
@@ -108,45 +108,50 @@
 		}
 		
 		.pt-cover {
-            //border: 1px solid green; //<-- development line
+            width: 100%;
+            height: 440px;
+            position: relative;
 
-			width: 440px;
-			height: 100%;
-			position: absolute;
-			top: 0;
-			left: 0;
-
-            // Tablet //
-            @media (max-width: 999px){
-                width: 100%;
-                height: 440px;
-                position: relative;
+            // Small Desktop //
+            @media screen 
+            and (min-width: 1025px){
+                width: 380px;
+			    height: 100%;
+			    position: absolute;
+			    top: 0;
+			    left: 0;
             }
 
-            // iPad-Landscape //
-            @media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape){
-                position: fixed;
+            // Notebook //
+            @media screen 
+            and (min-width: 1300px){
+                width: 440px;
+			    height: 100%;
             }
 		}
 
-        /*
-        // Tablet //
-        @media (max-width: 999px){
-
-            .pt-cover {
-                border: 1px solid #eee; //<-- development line
-                width: 100%;
-                height: 440px;
-                position: relative;
-            }
-        }*/
-
-
-        @media (min-width: 1000px){
-            
+        @media (min-width: 1025px){
             .pt-body {
                 position:relative; 
-                padding-left: 440px;
+                padding-left: 380px;
+            }
+        }
+
+        .pt-body {
+            width: 100%;
+            position: relative;
+
+            // Small Desktop //
+            @media (min-width: 1025px){
+                position:relative; 
+                padding-left: 380px;
+            }
+
+            // Notebook //
+            @media screen 
+            and (min-width: 1300px){
+                width: 440px;
+			    height: 100%;
             }
         }
 	}
